--- a/index.html
+++ b/index.html
@@ -39,6 +39,22 @@
         </div>
     </section>
 
+    <section class="about" id="about">
+        <div class="max-width">
+            <h2 class="title">Sobre mim</h2>
+                <div class="about-content">
+                    <div class="column left">
+                        <img src="images/profilepic.png" alt="">
+                    </div>
+                    <div class="column right">
+                        <div class="text">Eu sou Edder Luan e sou <span>Desenvolvedor</span></div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repellendus perspiciatis pariatur saepe facere magnam qui quos a, voluptatem dignissimos eaque? Laboriosam eos quae tempore reprehenderit repudiandae ratione amet, voluptates suscipit nihil cumque molestiae ullam voluptas quo quod repellendus nostrum eius laborum sint quia. Facere suscipit alias eaque voluptate veniam rem officia quia aperiam est blanditiis nulla, ex magnam tempora! Recusandae beatae, inventore dicta ullam repellendus necessitatibus. Error odit iusto nesciunt ab sit. Pariatur fuga, quia obcaecati qui porro vitae distinctio dolor reiciendis atque odio commodi omnis aliquid eligendi error praesentium sapiente, laborum repellendus nostrum eveniet non quod vel voluptatibus inventore. Amet, dolores consequuntur. Numquam eligendi, amet aspernatur eos ullam ea, vero sunt magni distinctio odio consequuntur, incidunt optio eaque laborum nobis accusantium qui molestias! Pariatur accusantium nulla numquam quo rem consequuntur voluptate maxime blanditiis deserunt minus iusto obcaecati enim unde rerum modi esse, dignissimos saepe, eius, eaque magnam distinctio expedita beatae a. Eos quas pariatur quisquam cumque officia atque suscipit incidunt error molestiae velit. Aliquam at ut ipsum nisi incidunt vitae alias quam, saepe magni in nobis nostrum non obcaecati placeat consectetur reprehenderit! Vitae mollitia recusandae ratione, nulla sit, expedita voluptatem aperiam officia consequatur deleniti ullam at impedit? Facilis!</p>
+                        <a href="#">Download CV</a>
+                    </div>
+                </div>
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 </html>
