--- a/index.html
+++ b/index.html
@@ -1,60 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Portfolio</title>
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script> </script>
+    <link rel="stylesheet" href="css/styles.css" type="text/css"/>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-</head>
-<body>
-
+  </head>
+  <body>
     <nav class="navbar">
-        <div class="max-width">
-            <div class="logo"> <a href="#">Portfo<span>lio.</span></a></div>
-            <ul class="menu">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">Sobre</a></li>
-                <li><a href="#apps">Aplicações</a></li>
-                <li><a href="#services">Serviços</a></li>
-                <li><a href="#tools">Ferramentas</a></li>
-                <li><a href="#contact">Contato</a></li>
-            </ul>
-            <div class="menu-btn">
-                <i class="fas fa-bars"></i>
-            </div>
+      <div class="max-width">
+        <div class="logo">
+          <a href="#">Portfo<span>lio.</span></a>
         </div>
+        <ul class="menu">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">Sobre</a></li>
+          <li><a href="#services">Serviços</a></li>
+          <li><a href="#skills">Habilidades</a></li>
+          <li><a href="#tools">Ferramentas</a></li>
+          <li><a href="#contact">Contato</a></li>
+        </ul>
+        <div class="menu-btn">
+          <i class="fas fa-bars"></i>
+        </div>
+      </div>
     </nav>
 
     <section class="home" id="home">
-        <div class="max-width">
-            <div class="home-content">
-                <div class="text-1">Olá, eu sou</div>
-                <div class="text-2">Edder Luan</div>
-                <div class="text-3">e sou <span>Desenvolvedor</span></div>
-                <a href="#">Conheça</a>
-            </div>
+      <div class="max-width">
+        <div class="home-content">
+          <div class="text-1">Olá, eu sou</div>
+          <div class="text-2">Edder Luan</div>
+          <div class="text-3">e sou <span>Desenvolvedor</span></div>
+          <a href="#">Conheça</a>
         </div>
+      </div>
     </section>
 
     <section class="about" id="about">
-        <div class="max-width">
-            <h2 class="title">Sobre mim</h2>
-                <div class="about-content">
-                    <div class="column left">
-                        <img src="images/profilepic.png" alt="">
-                    </div>
-                    <div class="column right">
-                        <div class="text">Eu sou Edder Luan e sou <span>Desenvolvedor</span></div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repellendus perspiciatis pariatur saepe facere magnam qui quos a, voluptatem dignissimos eaque? Laboriosam eos quae tempore reprehenderit repudiandae ratione amet, voluptates suscipit nihil cumque molestiae ullam voluptas quo quod repellendus nostrum eius laborum sint quia. Facere suscipit alias eaque voluptate veniam rem officia quia aperiam est blanditiis nulla, ex magnam tempora! Recusandae beatae, inventore dicta ullam repellendus necessitatibus. Error odit iusto nesciunt ab sit. Pariatur fuga, quia obcaecati qui porro vitae distinctio dolor reiciendis atque odio commodi omnis aliquid eligendi error praesentium sapiente, laborum repellendus nostrum eveniet non quod vel voluptatibus inventore. Amet, dolores consequuntur. Numquam eligendi, amet aspernatur eos ullam ea, vero sunt magni distinctio odio consequuntur, incidunt optio eaque laborum nobis accusantium qui molestias! Pariatur accusantium nulla numquam quo rem consequuntur voluptate maxime blanditiis deserunt minus iusto obcaecati enim unde rerum modi esse, dignissimos saepe, eius, eaque magnam distinctio expedita beatae a. Eos quas pariatur quisquam cumque officia atque suscipit incidunt error molestiae velit. Aliquam at ut ipsum nisi incidunt vitae alias quam, saepe magni in nobis nostrum non obcaecati placeat consectetur reprehenderit! Vitae mollitia recusandae ratione, nulla sit, expedita voluptatem aperiam officia consequatur deleniti ullam at impedit? Facilis!</p>
-                        <a href="#">Download CV</a>
-                    </div>
-                </div>
+      <div class="max-width">
+        <h2 class="title">Sobre mim</h2>
+        <div class="about-content">
+          <div class="column left">
+            <img src="images/profilepic.png" alt="" />
+          </div>
+          <div class="column right">
+            <div class="text">
+              Eu sou Edder Luan e sou <span>Desenvolvedor</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+              repellendus perspiciatis pariatur saepe facere magnam qui quos a,
+              voluptatem dignissimos eaque? Laboriosam eos quae tempore
+              reprehenderit repudiandae ratione amet, voluptates suscipit nihil
+              cumque molestiae ullam voluptas quo quod repellendus nostrum eius
+              laborum sint quia. Facere suscipit alias eaque voluptate veniam
+              rem officia quia aperiam est blanditiis nulla, ex magnam tempora!
+              Recusandae beatae, inventore dicta ullam repellendus
+              necessitatibus. Error odit iusto nesciunt ab sit. Pariatur fuga,
+              quia obcaecati qui porro vitae distinctio dolor reiciendis atque
+              odio commodi omnis aliquid eligendi error praesentium sapiente,
+              laborum repellendus nostrum eveniet non quod vel voluptatibus
+              inventore. Amet, dolores consequuntur. Numquam eligendi, amet
+              aspernatur eos ullam ea, vero sunt magni distinctio odio
+              consequuntur, incidunt optio eaque laborum nobis accusantium qui
+              molestias! Pariatur accusantium nulla numquam quo rem consequuntur
+              voluptate maxime blanditiis deserunt minus iusto obcaecati enim
+              unde rerum modi esse, dignissimos saepe, eius, eaque magnam
+              distinctio expedita beatae a. Eos quas pariatur quisquam cumque
+              officia atque suscipit incidunt error molestiae velit. Aliquam at
+              ut ipsum nisi incidunt vitae alias quam, saepe magni in nobis
+              nostrum non obcaecati placeat consectetur reprehenderit! Vitae
+              mollitia recusandae ratione, nulla sit, expedita voluptatem
+              aperiam officia consequatur deleniti ullam at impedit? Facilis!
+            </p>
+            <a href="#">Download CV</a>
+          </div>
         </div>
+      </div>
+    </section>
+
+    <section class="services" id="services">
+      <div class="max-width">
+        <h2 class="title">Serviços</h2>
+        <div class="services-content">
+          <div class="card">
+            <div class="box">
+              <i class="fas fa-chart-line"></i>
+              <div class="text">Back-End</div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+                impedit in maxime dolor necessitatibus eveniet!
+              </p>
+              <a href="https://github.com/edderluanps/?tab=repositories"
+                >Ver mais</a
+              >
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="box">
+              <i class="fas fa-code"></i>
+              <div class="text">Front-End</div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+                impedit in maxime dolor necessitatibus eveniet!
+              </p>
+              <a href="https://github.com/edderluanps/?tab=repositories"
+                >Ver mais</a
+              >
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="box">
+              <i class="fas fa-mobile"></i>
+              <div class="text">Mobile Apps</div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+                impedit in maxime dolor necessitatibus eveniet!
+              </p>
+              <a href="https://github.com/edderluanps/?tab=repositories"
+                >Ver mais</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <script src="js/script.js"></script>
-</body>
+  </body>
 </html>
