--- a/index.html
+++ b/index.html
@@ -341,6 +341,19 @@
       </div>
     </section>
 
+    <section class="footer">
+      <div class="max-width">
+        <h2 class="title">Obrigado pela visita!</h2>
+        <div class="footer-content">
+          <div class="icons">
+            <i class="fab fa-github-alt"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-youtube"></i>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="js/script.js"></script>
   </body>
 </html>
