Animações com Typed.js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/styles.css" type="text/css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" integrity="sha512-3J8teBiHrSyaaRBajZyIEtpDsXdPq1gsznKWIVb5CnorQuFhjWGhWe54z8YNnHHr7MZuExb9m5kvf964HiT1Sw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js" integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -40,7 +41,7 @@
         <div class="home-content">
           <div class="text-1">Olá, eu sou</div>
           <div class="text-2">Edder Luan</div>
-          <div class="text-3">e sou <span>Desenvolvedor</span></div>
+          <div class="text-3"><span class="texto"></span></div>
           <a href="#about">Conheça</a>
         </div>
       </div>
@@ -55,7 +56,7 @@
           </div>
           <div class="column right">
             <div class="text">
-              Eu sou Edder Luan e sou <span>Desenvolvedor</span>
+              Eu sou Edder Luan e sou <span class="texto-2"></span>
             </div>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
@@ -245,7 +246,7 @@
             <div class="card">
               <div class="box">
                 <img src="https://dkrn4sk0rn31v.cloudfront.net/uploads/2020/11/o-que-e-o-spring.png" alt="java-spring">
-                <div class="text"><a href="https://github.com/edderluanps/Springboot-API-Rest"> Spring Boot</a></div>
+                <div class="text"><a href="https://github.com/edderluanps/Springboot-API-Rest"> API Rest Spring </a></div>
                 <p>
                   Projeto back-end de Api REST desenvolvida com Spring e MongoDB.
                 </p>  
@@ -255,7 +256,7 @@
             <div class="card">
               <div class="box">
                 <img src="https://blog.rocketseat.com.br/content/images/2018/12/3-passos-para-aprender-react-native.png" alt="spring-react">
-                <div class="text"><a href="https://github.com/edderluanps/dsmovie"> Spring + React</a></div>
+                <div class="text"><a href="https://github.com/edderluanps/dsmovie"> Projeto com React</a></div>
                 <p>
                   Projeto Full Stack com Spring no back-end e React no front-end.
                 </p>
@@ -265,7 +266,7 @@
             <div class="card">
               <div class="box">
                 <img src="https://www.informatik-aktuell.de/fileadmin/templates/wr/pics/Artikel/02_Entwicklung/Programmiersprachen/720-Angular.jpg" alt="spring-angular">
-                <div class="text"><a href="https://github.com/edderluanps/dsmovie"> Spring + Angular</a></div>
+                <div class="text"><a href="https://github.com/edderluanps/dsmovie"> Projeto com Angular</a></div>
                 <p>
                   Projeto Full Stack com Spring no back-end e Angular no front-end.
                 </p>
