Adicionando informações pessoais

--- a/index.html
+++ b/index.html
@@ -59,30 +59,17 @@
               Eu sou Edder Luan e sou <span class="texto-2"></span>
             </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-              repellendus perspiciatis pariatur saepe facere magnam qui quos a,
-              voluptatem dignissimos eaque? Laboriosam eos quae tempore
-              reprehenderit repudiandae ratione amet, voluptates suscipit nihil
-              cumque molestiae ullam voluptas quo quod repellendus nostrum eius
-              laborum sint quia. Facere suscipit alias eaque voluptate veniam
-              rem officia quia aperiam est blanditiis nulla, ex magnam tempora!
-              Recusandae beatae, inventore dicta ullam repellendus
-              necessitatibus. Error odit iusto nesciunt ab sit. Pariatur fuga,
-              quia obcaecati qui porro vitae distinctio dolor reiciendis atque
-              odio commodi omnis aliquid eligendi error praesentium sapiente,
-              laborum repellendus nostrum eveniet non quod vel voluptatibus
-              inventore. Amet, dolores consequuntur. Numquam eligendi, amet
-              aspernatur eos ullam ea, vero sunt magni distinctio odio
-              consequuntur, incidunt optio eaque laborum nobis accusantium qui
-              molestias! Pariatur accusantium nulla numquam quo rem consequuntur
-              voluptate maxime blanditiis deserunt minus iusto obcaecati enim
-              unde rerum modi esse, dignissimos saepe, eius, eaque magnam
-              distinctio expedita beatae a. Eos quas pariatur quisquam cumque
-              officia atque suscipit incidunt error molestiae velit. Aliquam at
-              ut ipsum nisi incidunt vitae alias quam, saepe magni in nobis
-              nostrum non obcaecati placeat consectetur reprehenderit! Vitae
-              mollitia recusandae ratione, nulla sit, expedita voluptatem
-              aperiam officia consequatur deleniti ullam at impedit? Facilis!
+              Minha jornada na área de desenvolvimento de sistemas começou em 2019,
+               quando comecei a cursar Sistemas de informação na Unifacol, 
+               onde tive os primeiros contatos com linguagens de programação como Python e Java.
+                Em 2020 resolvi me aprofundar no Java como minha principal linguagem de programação. 
+                A partir dai, tive contato com diferentes modos de desenvolvimento, Desktop, Web, Mobile,
+                 banco de dados SQL e NoSQL, além de alguns frameworks fortes no mercado, como Hibernate, 
+                 JSF e Spring. Em 2021 vendi meu primeiro projeto, um software PDV Desktop. Desde então, 
+                 resolvi me dedicar no desenvolvimento de aplicações Full Stack. Ainda em 2021 tive contato com Angular
+                 , React e Ionic, visando integrar alguns projetos Back-end desenvolvidos com
+                 java a uma interface de usuário também desenvolvida por mim. 
+                 A partir daí comecei a direcionar meus estudos nestas Stacks.
             </p>
             <a href="https://linkedin.com/in/edderluanps">Download CV</a>
           </div>
@@ -99,8 +86,8 @@
               <i class="fas fa-chart-line"></i>
               <div class="text">Back-End</div>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-                impedit in maxime dolor necessitatibus eveniet!
+                Desenvolvimento de APIs e WebServices utilizando Java, Spring, JPA, 
+                MySQL, MongoDB.
               </p>
               <a href="https://github.com/edderluanps/?tab=repositories"
                 >Ver mais</a
@@ -113,8 +100,8 @@
               <i class="fas fa-code"></i>
               <div class="text">Front-End</div>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-                impedit in maxime dolor necessitatibus eveniet!
+                Desenvolvimento de Páginas Web utilizando HTML, CSS, Bootstrap, 
+                JavaScript, JQuery, Angular, React.
               </p>
               <a href="https://github.com/edderluanps/?tab=repositories"
                 >Ver mais</a
@@ -127,8 +114,8 @@
               <i class="fas fa-mobile"></i>
               <div class="text">Mobile Apps</div>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-                impedit in maxime dolor necessitatibus eveniet!
+                Desenvolvimento de Aplicações Mobile utilizando Java, Android Studio,
+                Ionic, Firebase.
               </p>
               <a href="https://github.com/edderluanps/?tab=repositories"
                 >Ver mais</a
@@ -147,17 +134,9 @@
           <div class="column left">
             <div class="text">Minhas habilidades e experiência</div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-              repellendus perspiciatis pariatur saepe facere magnam qui quos a,
-              voluptatem dignissimos eaque? Laboriosam eos quae tempore
-              reprehenderit repudiandae ratione amet, voluptates suscipit nihil
-              cumque molestiae ullam voluptas quo quod repellendus nostrum eius
-              laborum sint quia. Facere suscipit alias eaque voluptate veniam
-              rem officia quia aperiam est blanditiis nulla, ex magnam tempora!
-              Recusandae beatae, inventore dicta ullam repellendus
-              necessitatibus.
+              Um pequeno resumo a respeito das Stacks com que já tive contato e qual o grau de conhecimento que possuo nas demais.
             </p>
-            <a href="">Leia Mais</a>
+            <a href="https://github.com/edderluanps">Ver Mais</a>
           </div>
 
           <div class="column right">
@@ -282,7 +261,7 @@
         <div class="contact-content">
           <div class="column left">
             <div class="text">Informações para contato</div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis excepturi fuga ratione impedit voluptatem voluptas optio quasi possimus libero inventore.</p>
+            <p>Caso queira entrar em contato, aqui estão algumas das informações que lhe podem ser útil.</p>
             <div class="icons">
               <div class="row">
                 <i class="fas fa-user"></i>
@@ -316,7 +295,7 @@
                 <i class="fab fa-linkedin"></i>
                 <div class="text"><a href="https://linkedin.com/in/edderluanps"> LinkedIn</a></div>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Meu perfil no GitHub e meus repositórios com tudo que utilizo.
                 </p>
               </div>
             </div>
@@ -326,7 +305,7 @@
                 <i class="fab fa-github"></i>
                 <div class="text"><a href="https://github.com/edderluanps/"> GitHub</a></div>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Meu perfil no LinkedIn com mais informações.
                 </p>
               </div>
             </div>
@@ -334,9 +313,9 @@
             <div class="card">
               <div class="box">
                 <i class="fab fa-youtube"></i>
-                <div class="text"><a href="https://youtube.com/"> YouTube</a></div>
+                <div class="text"><a href=""> YouTube</a></div>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Sem vídeos no YouTube no momento.
                 </p>
               </div>
             </div>
@@ -350,9 +329,9 @@
         <h2 class="title">Obrigado pela visita!</h2>
         <div class="footer-content">
           <div class="icons">
-            <i class="fab fa-github-alt"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-youtube"></i>
+            <a href="https://github.com/edderluanps"><i class="fab fa-github-alt"></i></a>
+            <a href="http://linkedin.com/in/edderluanps"><i class="fab fa-linkedin"></i></a>
+            <a href=""></a><i class="fab fa-youtube"></i></a>
           </div>
         </div>
       </div>
