--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <div class="bars">
               <div class="info">
                 <span>JavaScript</span>
-                <span>50%</span>
+                <span>60%</span>
               </div>
               <div class="line js">
               </div>
@@ -245,7 +245,7 @@
             <div class="card">
               <div class="box">
                 <img src="https://www.informatik-aktuell.de/fileadmin/templates/wr/pics/Artikel/02_Entwicklung/Programmiersprachen/720-Angular.jpg" alt="spring-angular">
-                <div class="text"><a href="https://github.com/edderluanps/dsmovie"> Projeto com Angular</a></div>
+                <div class="text"><a href="https://github.com/edderluanps/sistema-controle"> Projeto com Angular</a></div>
                 <p>
                   Projeto Full Stack com Spring no back-end e Angular no front-end.
                 </p>
